
Changes to JavaExpression parsing:
 * The signatures of these methods changed; see Javadoc.
    * `JavaExpressionParseUtil#parse`
    * `DependentTypesHelper#standardizeString`
 * These methods moved:
    * `GenericAnnotatedTypeFactory#standardizeAnnotationFromContract` => `DependentTypesHelper`
    * `JavaExpressionParseUtil#fromVariableTree` => `JavaExpression`

Parsing a Java expression no longer requires the formal parameters
`AnnotationProvider provider` or `boolean allowNonDeterministic`.  Methods
in `JavaExpression` with simplified signatures include
 * `fromArrayAccess`
 * `fromNodeFieldAccess`
 * `fromNode`
 * `fromTree`
 * `getParametersOfEnclosingMethod`
 * `getReceiver`

`CFAbstractStore.insertValue` does nothing if passed a nondeterministic
expression.  Use new method `CFAbstractStore.insertValuePermitNondeterministic`
to map a nondeterministic expression to a value.

**Closed issues:**

---------------------------------------------------------------------------

Version 3.10.0, February 1, 2021

**User-visible changes:**

Moved utility classes from `checker-qual.jar` to the new `checker-util.jar`.
Also, added `util` to the end of all the packages of the utility classes.

In Maven Central, `checker.jar` no longer contains duplicates of qualifiers in
`checker-qual.jar`, but rather uses a Maven dependency. A fat jar file with all
the dependencies (like the old `checker.jar`) is available in Maven Central with
the classifier "all".

When supplying the `-Ainfer=...` command-line argument, you must also supply `-Awarns`.

Replaced several error message keys:
 * `contracts.precondition.expression.parameter.name`
 * `contracts.postcondition.expression.parameter.name`
 * `contracts.conditional.postcondition.expression.parameter.name`
 * `method.declaration.expression.parameter.name`
by new message keys:
 * `expression.parameter.name.invalid`
 * `expression.parameter.name.shadows.field`

**Implementation details:**
